crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.Points3D.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
positions: [[0.0, 0.0, 0.0]]
radii: [-1.5]
colors: [3161148927]
labels: []
show_labels: [true]
point_shading: [1]
class_ids: [0]
keypoint_ids: [0]
